2004-01-07  Sascha Brawer  <brawer@dandelis.ch>
	
	* gnu/testlet/javax/swing/undo/CompoundEdit/
	addEdit.java, canRedo.java, canUndo.java, isInProgress.java,
	lastEdit.java: New tests.
	
	* gnu/testlet/javax/swing/undo/UndoableEditSupport/
	UndoableEditSupport.java, createCompoundEdit.java,
	getUndoableEditListeners.java, getUpdateLevel.java: New tests.
	
	Classpath bug #7119.
	* gnu/testlet/javax/swing/undo/UndoableEditSupport/toString.java:
	New test.

2004-01-06  Sascha Brawer  <brawer@dandelis.ch>

	Classpath bug #7109.
	* gnu/testlet/javax/swing/undo/UndoableEditSupport/beginUpdate.java:
	New test.

2004-01-06  Sascha Brawer  <brawer@dandelis.ch>

	* gnu/testlet/java/awt/image/SinglePixelPackedSampleModel/
	createDataBuffer, getSampleSize.java: New tests.

2004-01-06  Sascha Brawer  <brawer@dandelis.ch>

	Classpath bug #7107.
	* gnu/testlet/javax/swing/DefaultBoundedRangeModel/
	DefaultBoundedRangeModel.java, getChangeListeners.java,
	getExtent.java, getMaximum.java, getMinimum.java,
	getValueIsAdjusting.java, getValue.java, setExtent.java,
	setMaximum.java, setMinimum.java, setRangeProperties.java,
	setValueIsAdjusting.java, setValue.java, toString.java: New tests.

2004-01-06  Sascha Brawer  <brawer@dandelis.ch>

	* gnu/testlet/javax/swing/event/EventListenerList/getListeners.java,
	gnu/testlet/javax/swing/event/EventListenerList/getListenerCount.java,
	gnu/testlet/javax/swing/event/EventListenerList/getListenerList.java,
	gnu/testlet/javax/swing/event/EventListenerList/toString.java:
	New tests.

2004-01-06  Sascha Brawer  <brawer@dandelis.ch>

	Classpath bug #7105.
	* gnu/testlet/javax/swing/event/EventListenerList/remove.java: New
	test, passes with JDK 1.4.1_01 but not with Classpath.

2004-01-06  Sascha Brawer  <brawer@dandelis.ch>

	Classpath bug #7104.
	* gnu/testlet/javax/swing/event/EventListenerList/add.java: New test,
	passes with JDK 1.4.1_01 but not with Classpath.

2004-01-03  Per Bothner  <per@bothner.com>
